--- a/Backend/GanaPay.Infrastructure/GanaPay.Infrastructure.csproj
+++ b/Backend/GanaPay.Infrastructure/GanaPay.Infrastructure.csproj
@@ -1,5 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\GanaPay.Core\GanaPay.Core.csproj" />
+    <ProjectReference Include="..\GanaPay.Application\GanaPay.Application.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
