--- a/Backend/GanaPay.Application/GanaPay.Application.csproj
+++ b/Backend/GanaPay.Application/GanaPay.Application.csproj
@@ -4,6 +4,11 @@
     <ProjectReference Include="..\GanaPay.Core\GanaPay.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
