--- a/Backend/GanaPay.API/appsettings.json
+++ b/Backend/GanaPay.API/appsettings.json
@@ -5,8 +5,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AllowedOrigins": [
+    "http://localhost:3000",
+    "https://localhost:3000"
+  ]
 }
