feat: backend initial setup with clean architecture
- Domain layer: entities (Usuario, Cuenta, Transaccion), enums (TipoMoneda, TipoTransaccion, EstadoTransaccion, RolUsuario) and repository interfaces
- Infrastructure layer: ApplicationDbContext, entity configurations, base and user repository implementations, data seeder
- API layer: users controller, CORS configuration, JWT and JSON serialization setup, environment-specific settings
- NuGet packages: EF Core, BCrypt, AutoMapper, FluentValidation, JWT Bearer, MongoDB Driver

--- a/Backend/GanaPay.API/GanaPay.API.csproj
+++ b/Backend/GanaPay.API/GanaPay.API.csproj
@@ -7,8 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.23" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.11">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GanaPay.Core\GanaPay.Core.csproj" />
+    <ProjectReference Include="..\GanaPay.Application\GanaPay.Application.csproj" />
+    <ProjectReference Include="..\GanaPay.Infrastructure\GanaPay.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
