--- a/Backend/GanaPay.API/appsettings.json
+++ b/Backend/GanaPay.API/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=GanaPayDB;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
+  "JwtSettings": {
+    "SecretKey": "MI_CLAVE_SUPER_SECRETA_DE_AL_MENOS_32_CARACTERES_PARA_MAYOR_SEGURIDAD",
+    "Issuer": "GanaPay",
+    "Audience": "GanaPayUsers",
+    "ExpirationInMinutes": 1440
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
