feat(audit): add MongoDB audit logging service
Add AuditService with login and transfer logging, MongoDbSettings,
AuditLog model, and register dependencies in DI.

--- a/Backend/GanaPay.API/appsettings.json
+++ b/Backend/GanaPay.API/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=GanaPayDB;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "GanaPayAudit"
+  },
   "JwtSettings": {
     "SecretKey": "MI_CLAVE_SUPER_SECRETA_DE_AL_MENOS_32_CARACTERES_PARA_MAYOR_SEGURIDAD",
     "Issuer": "GanaPay",
